@@ -76,6 +76,12 @@ template($tt,'var/mkits/reset_password.mkit/body.html', $vars);
 my $t_alt = Template->new({ABSOLUTE => 1, START_TAG => quotemeta('[%['), END_TAG => quotemeta(']%]')});
 template($t_alt,'views/footer_include.tt', $vars);
 template($t_alt,'views/header_include.tt', $vars);
+template($t_alt,'views/bootstrap_css_include.tt', $vars);
+template($t_alt,'views/bootstrap_js_include.tt', $vars);
+template($t_alt,'views/jquery_js_include.tt', $vars);
+template($t_alt,'views/wing_js_include.tt', $vars);
+template($t_alt,'views/pnotify_css_include.tt', $vars);
+template($t_alt,'views/pnotify_js_include.tt', $vars);
 template($t_alt,'views/error.tt', $vars);
 template($t_alt,'views/status_include.tt', $vars);
 template($t_alt,'views/admin/users.tt', $vars);
