@@ -1,8 +1,8 @@
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="//cdn.jsdelivr.net/pnotify/1.2/jquery.pnotify.min.js"></script>
-<script src="/wing.js" type="text/javascript"></script>
+[% INCLUDE jquery_js_include.tt %]
+[% INCLUDE bootstrap_js_include.tt %]
+[% INCLUDE pnotify_js_include.tt %]
+[% INCLUDE wing_js_include.tt %]
 [% INCLUDE status_include.tt %]
 [% section_foot_tags %]
 [% foot_tags %]
